# flow_logger

./: README.md  __init__.py  core.py  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml  testpypi-python-publish.yml
flowlogger2/: __init__.py  core.py  setup.py
flowlogger2/templates/: report_template.html
templates/: log_entry.html  report_template.html
